--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "format": "prettier --write .",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "prettier": "^3.4.2",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.8.1"
