--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,11 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/static/(.*)", 
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/(.*)", 
       "dest": "/index.html"
     }
   ]
